SFDCProject/src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <label>Appointment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Description__c</fullName>
        <label>Appointment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_End_Date_Time__c</fullName>
        <label>Appointment  End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_Local__c</fullName>
        <label>Appointment Time Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit Revisit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8hr Field Service visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <inlineHelpText>Why was the appointment not completed?</inlineHelpText>
        <label>Cancellation Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Customer Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fake / Duplicate Appointment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF( ISBLANK( Opportunity__c ), TEXT(Lead__r.Channel__c ), TEXT( Opportunity__r.Channel_2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>BSKY-4280</description>
        <inlineHelpText>How did the appointment end?</inlineHelpText>
        <label>Disposition</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Follow Up Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Inactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Appointment_End_Date_Time__c -  Appointment_Date_Time__c</formula>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Assigned_To_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Assignee1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Event Assignee1)</relationshipLabel>
        <relationshipName>Appointments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Assigned_To_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Assignee2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Event Assignee2)</relationshipLabel>
        <relationshipName>Appointments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Assigned_To_Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Assignee3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Event Assignee3)</relationshipLabel>
        <relationshipName>Appointments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Assigned_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Event_Assigned_To)</relationshipLabel>
        <relationshipName>Appointments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Details__c</fullName>
        <label>External Sync Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Sync_InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Sync InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Sync_Status__c</fullName>
        <label>External Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Synched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Sync_System__c</fullName>
        <label>External Sync System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FS Dispatch</label>
        <referenceTo>FS_Dispatch__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Marketing_Branch__c</fullName>
        <formula>TEXT(Opportunity__r.Field_Marketing_Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Marketing Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <formula>Opportunity__r.Lead_Created_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Branch__c</fullName>
        <formula>TEXT( Lead__r.Sales_Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Sales Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>IF( ISBLANK( Opportunity__c), TEXT( Lead__r.Custom_Lead_Source__c), TEXT( Opportunity__r.Lead_Source_2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_for_SMS__c</fullName>
        <label>Mobile for SMS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_for_Mobile__c</fullName>
        <formula>Opportunity__r.Homeowner_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name for Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_people_needed_for_Site_Audit__c</fullName>
        <formula>Opportunity__r.Number_of_Reps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of people needed for Site Audit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_Id__c</fullName>
        <formula>Opportunity__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Branch__c</fullName>
        <formula>TEXT( Opportunity__r.Sales_Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sales Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Rep_Title__c</fullName>
        <formula>Opportunity__r.SalesRep__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sales Rep Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Rep__c</fullName>
        <formula>Opportunity__r.SalesRep__r.FirstName + &apos; &apos; + Opportunity__r.SalesRep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BSKY-4280</description>
        <inlineHelpText>Has the cancelled appointment be rescheduled?</inlineHelpText>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_2_people__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled for 2 people?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spoke_w_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BSKY-4280</description>
        <inlineHelpText>Did you speak to the customer prior to running the appointment? Has the appointment been confirmed?</inlineHelpText>
        <label>Spoke w/ Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment Set</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>IF(ISBLANK(Opportunity__c),Text(Lead__r.Sales_Branch__c),Text(Opportunity__r.Sales_Branch__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>SA_Bakersfield_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - Bakersfield Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_East_Bay_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - East Bay Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Fresno_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - Fresno Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_SLO_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - SLO Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Sacramento_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - Sacramento Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_South_Bay_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - South Bay Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Stockton_Branch_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <label>SA - Stockton Branch Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SLO_Appts_This_Week</fullName>
        <columns>Event_Assigned_To__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Appointment Set,Appointment Confirmed</value>
        </filters>
        <label>SLO Appts This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Site_Audit_Appointments_View</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>10/29/2015 12:00 AM</value>
        </filters>
        <label>Site Audit Appointments View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Staccato_Site_Audit_Appointments_View</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To_Contact1__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Audit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/15/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Event_Assigned_To_Contact1__c</field>
            <operation>equals</operation>
            <value>Staccato Clarida</value>
        </filters>
        <label>Staccato Site Audit Appointments View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ventura_Sales_Team_Past_Appointments2</fullName>
        <columns>Opportunity__c</columns>
        <columns>Event_Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Type__c</field>
            <operation>equals</operation>
            <value>Site Visit,Web Consultation,Follow Up,Contract Signing</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Appointment Set,Appointment Confirmed</value>
        </filters>
        <label>SLO Sales Team Past Appointments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APPT-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Appintment_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
ISCHANGED( Appointment_Date_Time__c ),  
ISCHANGED( Appointment_End_Date_Time__c ),  
ISCHANGED( Event_Assigned_To_Contact1__c) ,  
ISCHANGED( Event_Assigned_To_Contact2__c) ,  
ISCHANGED( Event_Assigned_To_Contact3__c) ,  
ISCHANGED( Event_Assigned_To_Contact4__c),
ISCHANGED( Opportunity__c)   
)</errorConditionFormula>
        <errorMessage>Users are not allowed to modify the appointment details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appointment_Cancellation_Reason_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Status__c,&quot;Appointment Cancelled&quot;), 
ISBLANK( Text(Cancellation_Reason__c)) 
)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please fill out Cancellation Reason</errorMessage>
    </validationRules>
</CustomObject>